--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -186,6 +186,7 @@ mat-tab-group {
 .info-panel {
   display: flex;
   flex-flow: row;
+  flex-wrap: wrap;
   border-bottom: 1px solid #e9eff5;
   padding-bottom: 20px;
   .info-text {
@@ -199,5 +200,5 @@ mat-tab-group {
   }
 }
 .info-panel> * {
-  flex: 1 1 40vw;
+  flex: 1 1 44vw;
 }
