Adjust width of full page map for mobile

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -29,6 +29,12 @@
   min-height: 400px !important;
 }
 
+@media screen and (max-width: 808px) {
+  .map-container {
+    max-width: 808px !important;
+  }
+}
+
 .incident-details {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   padding: 24px;
