Add back another removed flex-wrap
Why were these removed? Removing them breaks the responsive panels!?!

--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
@@ -80,6 +80,7 @@ select{
 .contents{
   display: flex;
   flex-flow: row;
+  flex-wrap: wrap;
   width: 100%;
   .left-panels{
     width: 50%;
@@ -128,7 +129,7 @@ select{
 }
 
 .contents> * {
-  flex: 1 1 30vw;
+  flex: 1 1 42vw;
   margin: 8px;
 }
 
