--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -7,8 +7,8 @@
       </h2>
     </div>
     <div class="button-holder">
-      <button mat-button>Show Preview</button>
-      <button mat-button color="primary">Publish Changes</button>
+      <button class="preview-btn" mat-button (click)="onShowPreview()">Show Preview</button>
+      <button class="publish-btn" mat-button color="primary">Publish Changes</button>
     </div>
   </div>
 </div>
