replace sticky widget with fabs on mobile

--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -24,6 +24,18 @@
     margin: 0 7.5px;
 }
 
+.btn-fab {
+  background-color: white;
+  margin-bottom: 10px;
+  color: #1A5A96;
+}
+
+.btn-fab-primary {
+  background-color: #1A5A96;
+  margin-bottom: 10px;
+  color: white;
+}
+
 .contact-btn{
     background-color: #1A5A96;
     border: solid 1px #1A5A96;
