--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.html
@@ -16,10 +16,16 @@
         </div>
       </div>
     </div>
-    <button *ngIf="!showWatchlist" class="btn watchlist-btn" (click)="loadWatchlist()">
+    <button *ngIf="!showWatchlist && !isMobileView()" class="btn watchlist-btn" (click)="loadWatchlist()">
         <mat-icon>bookmark</mat-icon>Watch List
     </button>
-    <button class="btn contact-btn" (click)="openContactForm()">
+    <button *ngIf="!isMobileView()" class="btn contact-btn" (click)="openContactForm()">
         <mat-icon>email</mat-icon>Contact Us
+    </button>
+    <button *ngIf="!showWatchlist && isMobileView()" class="btn-fab" mat-fab (click)="loadWatchlist()">
+      <mat-icon>bookmark</mat-icon>
+    </button>
+    <button *ngIf="isMobileView()" mat-fab class="btn-fab-primary" (click)="openContactForm()">
+        <mat-icon>email</mat-icon>
     </button>
 </div>
