--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -25,5 +25,5 @@
   failed to load...
 </div>
 <div *ngIf="isLoading">
-  loading...
+  <mat-spinner style="margin: auto;" *ngIf="!loaded" [diameter]="50"></mat-spinner>
 </div>
