--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -104,7 +104,7 @@
   </div>
 
   <div class="bottom">
-      <div [ngClass]="showAccordion ? 'details' : 'details close'">
+      <div *ngIf="!isMobileView()" [ngClass]="showAccordion ? 'details' : 'details close'">
           <panel-wildfire-stage-of-control-container-desktop *ngIf="selectedPanel === 'wildfire-stage-of-control' && showAccordion"></panel-wildfire-stage-of-control-container-desktop>
           <panel-evacuation-orders-and-alerts *ngIf="selectedPanel === 'evacuation-orders-and-alerts' && showAccordion"></panel-evacuation-orders-and-alerts>
           <panel-area-restrictions *ngIf="selectedPanel === 'area-restrictions' && showAccordion"></panel-area-restrictions>
@@ -133,7 +133,7 @@
             selectedPanel === 'routes-impacted' ? 'Drive BC' :
             selectedPanel === 'local-authorities' ? 'Local Authorities' : ''}}</div>
         </div>
-        <div class="panel-container" style="padding-top: 10px;">
+        <div *ngIf="isMobileView()" class="panel-container" style="padding-top: 10px;">
           <panel-wildfire-stage-of-control-container-desktop *ngIf="selectedPanel === 'wildfire-stage-of-control' && showAccordion"></panel-wildfire-stage-of-control-container-desktop>
           <panel-evacuation-orders-and-alerts *ngIf="selectedPanel === 'evacuation-orders-and-alerts' && showAccordion"></panel-evacuation-orders-and-alerts>
           <panel-area-restrictions *ngIf="selectedPanel === 'area-restrictions' && showAccordion"></panel-area-restrictions>
