--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -7,8 +7,8 @@
       </h2>
     </div>
     <div class="button-holder">
-      <button mat-button>Show Preview</button>
-      <button mat-button color="primary">Publish Changes</button>
+      <button class="preview-btn" mat-button (click)="onShowPreview()">Show Preview</button>
+      <button class="publish-btn" mat-button color="primary">Publish Changes</button>
     </div>
   </div>
 </div>
@@ -59,7 +59,7 @@
     </mat-accordion>
   </mat-tab>
   <mat-tab label="Incident Overview">
-    <ckeditor [editor]="Editor" [data]="incident.incidentOverview" (ready)="onReady($event)"></ckeditor>
+    <ckeditor [editor]="Editor" [(ngModel)]="incident.incidentOverview" (ready)="onReady($event)"></ckeditor>
   </mat-tab>
   <mat-tab label="Image Gallery">
     <image-gallery-panel [incident]="currentAdminIncident"></image-gallery-panel>
