add sticky widget to all public pages

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/wf-resources.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/wf-resources.component.html
@@ -12,3 +12,4 @@
     <resource-panel *ngFor="let panel of resourcePanels" [panelInfo]="panel"></resource-panel>
   </div>
 </div>
+<sticky-widget></sticky-widget>
