--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -79,7 +79,7 @@
     padding: 10px;
     margin-left: 10px;
     box-sizing: border-box;
-
+    min-width: 175px;
     h1 {
       font-size: 24px;
       font-weight: normal;
@@ -175,7 +175,7 @@
   .map {
     flex-grow: 1;
     overflow: hidden;
-    height: calc(100% - 180px);
+    height: calc(100% - 174px);
     position: relative;
 
     .map-container {
@@ -191,7 +191,7 @@
       z-index: 1000000;
       background-color: white;
       height: 100%;
-      width: 600px;
+      width: 50vw;
       display: none;
       overflow-y: auto;
       border: 1px solid #dddddd;
@@ -264,7 +264,13 @@ mat-panel-title {
   background-color: white
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1300px) {
+  .shrink {
+    font-size: 0.6rem !important;
+  }
+}
+
+@media screen and (max-width: 1200px) {
   .hide {
     display: none !important;
   }
