--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -12,7 +12,9 @@
           <incident-overview-panel [incident]="incident"></incident-overview-panel>
         </mat-tab>
         <mat-tab label="Gallery">
-          <incident-gallery-panel [incident]="incident"></incident-gallery-panel>
+          <ng-template matTabContent>
+            <incident-gallery-panel [incident]="incident"></incident-gallery-panel>
+          </ng-template>
         </mat-tab>
         <mat-tab label="Maps">
           <incident-maps-panel [incident]="incident"></incident-maps-panel>
