--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -182,6 +182,17 @@
   }
 }
 
+::ng-deep .menu {
+  display: none !important;
+}
+
+@media screen and (max-width: 768px) {
+  ::ng-deep .menu {
+    display: flex !important;
+    margin-left: auto;
+  }
+}
+
 @media print {
   wf-menu-bar{
     display: none !important;
