--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -192,6 +192,7 @@
       background-color: white;
       height: 100%;
       width: 50vw;
+      max-wdith: 600px;
       display: none;
       overflow-y: auto;
       border: 1px solid #dddddd;
