--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="content-panel">
         <div class="content-panel-stack">
-            <div *ngFor="let map of downloadableMaps">
+            <div *ngFor="let map of maps">
                 <div style="display: flex;">
                     <div class="file-pdf-icon" (click)="downloadMap(map.link)"></div>
                     <div>
