--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -104,15 +104,15 @@
   </div>
 
   <div class="bottom">
-      <div [ngClass]="showAccordion ? 'details' : 'details close'">
-          <panel-wildfire-stage-of-control-container-desktop *ngIf="selectedPanel === 'wildfire-stage-of-control' && showAccordion"></panel-wildfire-stage-of-control-container-desktop>
-          <panel-evacuation-orders-and-alerts *ngIf="selectedPanel === 'evacuation-orders-and-alerts' && showAccordion"></panel-evacuation-orders-and-alerts>
-          <panel-area-restrictions *ngIf="selectedPanel === 'area-restrictions' && showAccordion"></panel-area-restrictions>
-          <panel-bans-prohibitions *ngIf="selectedPanel === 'bans-and-prohibitions' && showAccordion"></panel-bans-prohibitions>
-          <panel-smoke-forecast *ngIf="selectedPanel === 'smoke-forecast' && showAccordion"></panel-smoke-forecast>
-          <panel-fire-danger *ngIf="selectedPanel === 'fire-danger' && showAccordion"></panel-fire-danger>
-          <panel-road-conditions *ngIf="selectedPanel === 'routes-impacted' && showAccordion"></panel-road-conditions>
-          <panel-local-authority *ngIf="selectedPanel === 'local-authorities' && showAccordion"></panel-local-authority>
+      <div id="panel-details" [ngClass]="showAccordion ? 'details' : 'details close'">
+          <panel-wildfire-stage-of-control-container-desktop *ngIf="selectedPanel === 'wildfire-stage-of-control'"></panel-wildfire-stage-of-control-container-desktop>
+          <panel-evacuation-orders-and-alerts *ngIf="selectedPanel === 'evacuation-orders-and-alerts'"></panel-evacuation-orders-and-alerts>
+          <panel-area-restrictions *ngIf="selectedPanel === 'area-restrictions'"></panel-area-restrictions>
+          <panel-bans-prohibitions *ngIf="selectedPanel === 'bans-and-prohibitions'"></panel-bans-prohibitions>
+          <panel-smoke-forecast *ngIf="selectedPanel === 'smoke-forecast'"></panel-smoke-forecast>
+          <panel-fire-danger *ngIf="selectedPanel === 'fire-danger'"></panel-fire-danger>
+          <panel-road-conditions *ngIf="selectedPanel === 'routes-impacted'"></panel-road-conditions>
+          <panel-local-authority *ngIf="selectedPanel === 'local-authorities'"></panel-local-authority>
       </div>
       <div class="map">
         <div class="identify-panel"></div>
