Various non-compliance fixes

--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -186,6 +186,10 @@
   display: none !important;
 }
 
+::ng-deep .system-and-user-info {
+  display: flex !important;
+}
+
 @media screen and (max-width: 768px) {
   ::ng-deep .menu {
     display: flex !important;
