--- a/client/wfnews-war/src/main/angular/src/app/components/panel-area-restrictions/panel-area-restrictions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-area-restrictions/panel-area-restrictions.component.html
@@ -22,7 +22,7 @@
     </article>
 </section>
 <section>
-  <h1>CURRENT AREA RESTRICTION</h1>
+  <h1>CURRENT AREA RESTRICTIONS</h1>
   <article>
     <div class="restriction-list" *ngFor="let area of areaRestrictions">
       <div class="label" (mouseup)="zoomToArea(area)">{{area.name}}</div>
@@ -34,7 +34,7 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions" target="_blank" rel="noopener">Current Restriction Information</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions" target="_blank" rel="noopener">Current Restrictions Information</a></p>
         <p><a href="http://www.sitesandtrailsbc.ca/closures.aspx" target="_blank" rel="noopener">Recreation Sites and Trails Closures</a></p>
         <p><a href="https://bcparks.ca/wildfire/" target="_blank" rel="noopener">BC Parks Closures</a></p>
     </article>
